--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,19 @@ sc-tennis
 ref
 todo
 workspaces
+*.mov
+*.pdf
+bandcamp
+bitwig
+droptableuser-tracks
+*.jks
+orca
+projects
+rack
+*.db
+soundcloud
+*.RTrackTemplate
+valhalla
+
+
 
